build-log.txt

> portfolio@0.0.0 build
> tsc -b && vite build

[36mvite v8.0.0 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 16 modules transformed.
[31m✗[39m Build failed in 344ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Unexpected token Function("var")
4  |  
5  |  
6  |  ...over span.framer-text:not([data-text-fill]){font-family:var(var(--framer-code-font-family, var(--framer-font-famil...
   |                                                                 ^
7  |      
8  |  
    at Module.<anonymous> (C:\Users\edwar\OneDrive\Desktop\jacob1k\portfolio\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:21170:59)
    at async finalizeCss (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:21016:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:2437:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:20555:19)
    at async plugin (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1211:16)
    at async plugin.<computed> (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/rolldown/dist/shared/bindingify-input-options-Cu7pt6SZ.mjs:1570:12)[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/rolldown/dist/shared/error-CP8smW_P.mjs:18:128)
    at #build (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/rolldown/dist/shared/rolldown-build-4YnQkA76.mjs:3311:34)
    at async buildEnvironment (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:32794:64)
    at async Object.build (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:33216:19)
    at async Object.buildApp (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/chunks/node.js:33213:153)
    at async CAC.<anonymous> (file:///C:/Users/edwar/OneDrive/Desktop/jacob1k/portfolio/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
